@@ -1,7 +1,7 @@
 <div ng-controller="StatusBarController">
   <ul class="nav navbar-nav navbar-right navbar-user">
     <li>Cluster: <span class="label label-cluster">{{cluster_name}}</span></li>
-    <li>Version: <span ng-show="version">{{ version.number }}<span ng-show="version.snapshot">-SNAPSHOT-{{ version.hash }}</span></span></li>
+    <li>Version: <span ng-class="{'label-danger':version_warning}" ng-show="version" data-original-title="{{ versions.join('\n') }}" rel="tooltip">{{ version.number }}<span ng-show="version.snapshot">-SNAPSHOT-{{ version.hash.substr(0,7) }}</span></span></li>
     <li>Nodes: <span class="label">{{ num_nodes }}</span></li>
     <li>Health: <span class="label {{cluster_color_label}}">{{cluster_state}}</span></li>
     <li>
