@@ -5,6 +5,8 @@ Changes for Crate Data Admin Interface
 Unreleased
 ==========
 
+ - display crate version of each node and show warning if cluster contains multiple versions
+
  - display heap size instead of system memory in node detail view
 
 2014/04/28 0.6.2
